--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
@@ -71,6 +71,12 @@
 
 
 <script>
+    $(function () {
+        cargar_tipo_liquidacion_nomina();
+        cargar_periodos_x_nomina();
+        cargar_empleados();
+    });
+
     $("#IdNomina_Tipo").change(function () {
         cargar_tipo_liquidacion_nomina();
         cargar_empleados();
@@ -83,34 +89,6 @@
     $("#IdPeriodo").change(function () {
         cargar_empleados();
     });
-
-    function cargar_procesos() {
-        $("#IdProceso").empty();
-
-                var datos = {
-                    IdBanco: $("#IdBanco").val()
-                }
-
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("get_list_procesos", "ProcesosBancariosPorEmpresa", new { Area = "General" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data) {
-
-                        $.each(data, function (i, row) {
-                            $("#IdProceso").append("<option value=" + row.IdProceso + ">" + row.NombreProceso + "</option>");
-
-                        });
-                    },
-                    error: function (error) {
-                    }
-                });
-    };
 
 
     function cargar_tipo_liquidacion_nomina() {
@@ -170,8 +148,8 @@
 
             function cargar_empleados() {
                 var datos = {
-                    IdNomina_Tipo: $("#IdNomina_Tipo").val(),
-                    IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
+                    IdNomina_Tipo_Tipo: $("#IdNomina_Tipo").val(),
+                    IdNomina_Tipo_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
                     IdPeriodo: $("#IdPeriodo").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val()
                     
@@ -187,7 +165,7 @@
                     dataType: 'json',
                     contentType: 'application/json; charset=utf-8',
                     success: function (data) {
-                        GridViewPartial_archivo_transferencia_det.PerformCallback();
+                        GridViewPartial_pagos_cheques_det.PerformCallback();
                     },
                     error: function (error) {
                     }
@@ -195,10 +173,5 @@
     };
 
 
-    $(function () {
-        cargar_procesos();
-        cargar_tipo_liquidacion_nomina();
-        cargar_periodos_x_nomina();
-    });
-
+ 
 </script>
