--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Nuevo.cshtml
@@ -148,8 +148,8 @@
 
             function cargar_empleados() {
                 var datos = {
-                    IdNomina_Tipo_Tipo: $("#IdNomina_Tipo").val(),
-                    IdNomina_Tipo_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
+                    IdNomina_Tipo: $("#IdNomina_Tipo").val(),
+                    IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
                     IdPeriodo: $("#IdPeriodo").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val()
                     
