--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/_GridViewPartial_pagos_cheques.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/_GridViewPartial_pagos_cheques.cshtml
@@ -51,7 +51,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("estado")) == "I")
+            if (Convert.ToBoolean(e.GetValue("Estado")) == true)
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -84,37 +84,36 @@
 
 
         settings.Columns.Add("IdTransaccion","ID").Width = Unit.Percentage(8);
-        //settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(22);
-        //settings.Columns.Add("DescripcionProcesoNomina", "Nómina tipo").Width = Unit.Percentage(8);
-        //settings.Columns.Add("NombreProceso", "Archivo").Width = Unit.Percentage(8);
+        settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(22);
+        settings.Columns.Add("DescripcionProcesoNomina", "Nómina tipo").Width = Unit.Percentage(8);
 
 
-        //settings.Columns.Add(column =>
-        //{
-        //    column.FieldName = "pe_FechaIni";
-        //    column.Caption = "Fecha inicio";
-        //    column.Width = Unit.Percentage(8);
-        //    column.PropertiesEdit.DisplayFormatString = "d";
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_FechaIni";
+            column.Caption = "Fecha inicio";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
 
-        //});
-        //settings.Columns.Add(column =>
-        //{
-        //    column.FieldName = "pe_FechaFin";
-        //    column.Caption = "Fecha fin";
-        //    column.Width = Unit.Percentage(8);
-        //    column.PropertiesEdit.DisplayFormatString = "d";
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pe_FechaFin";
+            column.Caption = "Fecha fin";
+            column.Width = Unit.Percentage(8);
+            column.PropertiesEdit.DisplayFormatString = "d";
 
-        //});
-        //settings.Columns.Add(column =>
-        //{
-        //    column.FieldName = "EstadoBool";
-        //    column.Caption = "Estado";
-        //    column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-        //    column.EditorProperties().CheckBox(sp =>
-        //    {
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
-        //    });
-        //});
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
@@ -130,7 +129,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_020", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdNominaTipo = DataBinder.Eval(c.DataItem, "IdNominaTipo").ToString(), IdNomina = DataBinder.Eval(c.DataItem, "IdNomina").ToString(), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_020", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo").ToString(), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdNomina_TipoLiqui").ToString(), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo").ToString() }, Request.Url.Scheme) + "');\"></span>");
 
             });
             column.Width = Unit.Percentage(5);
