--- a/ERP/Core.Erp.Web/Areas/Compras/Views/MotivoCompra/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/MotivoCompra/Nuevo.cshtml
@@ -17,7 +17,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="Cod_Motivo">Código*</label>
+                    <label for="Cod_Motivo">Código</label>
                     @Html.TextBoxFor(q => q.Cod_Motivo, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Cod_Motivo, "", new { @class = "text-danger" })
                 </div>
