--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Nuevo.cshtml
@@ -379,11 +379,9 @@
                 }
             }
 
-        var datos = {
+        var datos = {            
+            IdEmpresa: $("#IdEmpresa").val(),
             pe_cedulaRuc: cedula,
-            IdEmpresa: $("#IdEmpresa").val()
-
-
         }
         $.ajax({
             type: 'POST',
@@ -403,7 +401,7 @@
                 }
                 else
                 {
-                    if (data.IdPersona != 0 && data.IdCliente == 0) {
+                    if (data.IdPersona != 0 && data.IdProveedor == 0) {
                         $("#pe_nombre").val(data.info_persona.pe_nombre);
                         $("#pe_apellido").val(data.info_persona.pe_apellido);
                         $("#pe_nombreCompleto").val(data.info_persona.pe_nombreCompleto);
