--- a/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-primary">Aplicar filtros</button>
-                        <button type="button" class="btn btn-primary" id="btn_guardar" onclick="guardar_aprobacion();">Aprobar</button>
+                        <button type="button" class="btn btn-primary" id="btn_guardar" onclick="guardar_aprobacion();">Autorizar SRI</button>
                 </div>
             </div>
             <div class="box-tools pull-right">
