--- a/ERP/Core.Erp.Web/Areas/Compras/Views/TerminoPagoCompras/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/TerminoPagoCompras/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Compras.com_TerminoPago_Info
 @{
-    ViewBag.Title = "Nuevo termino";
+    ViewBag.Title = "Nuevo término de pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -11,23 +11,9 @@
 
 @using (Html.BeginForm("Nuevo", "TerminoPagoCompras", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-     if (ViewBag.mensaje != null)
-    {
-        <div class="alert alert-warning alert-dismissible">
-            <h4>
-                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
-            </h4>
-        </div>
-    }
+    @Html.HiddenFor(q=> q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdTerminoPago">Código*</label>
-                    @Html.TextBoxFor(q => q.IdTerminoPago, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
-                </div>
-            </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="Dias">Días*</label>
