--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Index.cshtml
@@ -103,7 +103,7 @@
         </div>
         <div class="box-body">
        
-                 @Html.Action("GridViewPartial_devolucion", new {IdSucursal = Model.IdSucursal, Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_ini })
+                 @Html.Action("GridViewPartial_devolucion", new {IdSucursal = Model.IdSucursal, Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
 
 
         </div>
