--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -13,12 +13,12 @@
 <script type="text/javascript">
     $(function () {
         //Date picker
-        $('#Fecha_ini').datepicker({
-            autoclose: true
-        })
-        $('#Fecha_fin').datepicker({
-            autoclose: true
-        })
+        //$('#Fecha_ini').datepicker({
+        //    autoclose: true
+        //})
+        //$('#Fecha_fin').datepicker({
+        //    autoclose: true
+        //})
         $('#FechaOP').datepicker({
             autoclose: true
         })
@@ -120,7 +120,7 @@
     }
 
     function GetSaldoAnterior() {
-        var d = $("#Fecha_ini").val();
+        var d = Fecha_ini.GetValue();
         var datos = {
             FechaCorte: d,
             IdCtaCble: $("#IdCtaCble").val()
@@ -179,8 +179,10 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 if (data.IdEmpresa != 0) {
-                    $('#Fecha_ini').datepicker("setDate", moment(data.pe_FechaIni).format("DD/MM/YYYY"));
-                    $('#Fecha_fin').datepicker("setDate", moment(data.pe_FechaFin).format("DD/MM/YYYY"));
+                    Fecha_ini.SetValue(data.pe_FechaIni);
+                    Fecha_fin.SetValue(data.pe_FechaFin);
+                    //$('#Fecha_ini').datepicker("setDate", moment(data.pe_FechaIni).format("DD/MM/YYYY"));
+                    //$('#Fecha_fin').datepicker("setDate", moment(data.pe_FechaFin).format("DD/MM/YYYY"));
                 }
             },
             error: function (error) {
@@ -190,7 +192,7 @@
 
     function GetIngresos() {
         var datos = {
-            FechaFin: $("#Fecha_fin").val(),
+            FechaFin: Fecha_fin.GetValue(),
             IdCaja: $("#IdCaja").val(),
             IdTransaccionFixed: $("#IdTransaccionSession").val()
         }
@@ -364,14 +366,30 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="Fecha_ini">Desde*</label>
-                    @Html.TextBoxFor(q => q.Fecha_ini, "{0:dd/MM/yyyy}", new { @id = "Fecha_ini", @class = "form-control" })
+                    @Html.DevExpress().DateEditFor(q => q.Fecha_fin, settings =>
+                    {
+                        settings.Name = "Fecha_ini";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha_ini, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="Fecha_fin">Hasta*</label>
-                    @Html.TextBoxFor(q => q.Fecha_fin, "{0:dd/MM/yyyy}", new { @id = "Fecha_fin", @class = "form-control" })
+                    @Html.DevExpress().DateEditFor(q => q.Fecha_fin, settings =>
+                    {
+                        settings.Name = "Fecha_fin";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha_fin, "", new { @class = "text-danger" })
                 </div>
             </div>
