--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorPagar.cp_SolicitudPago_Info
 @{
-    ViewBag.Title = "Nuevo tipo catálogo";
+    ViewBag.Title = "Modificar solicitud de pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -9,14 +9,11 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Nuevo", "SolicitudPago", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    @Html.HiddenFor(q=>q.IdEmpresa)
+@using (Html.BeginForm("Modificar", "SolicitudPago", FormMethod.Post, new { @class = "form", @role = "form" }))
+{    @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdSolicitud)
     <div class="row">
         <div class="col-md-12">
-
-
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
@@ -24,52 +21,66 @@
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="Valor">Valor</label>
-                    @Html.TextBoxFor(q => q.Valor, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Valor, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="Concepto">Concepto</label>
-                    @Html.TextBoxFor(q => q.Concepto, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Concepto, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
 
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="">Fecha inicio*</label>
+                    <label for="">Fecha*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
+                        @Html.DevExpress().DateEditFor(q => q.Fecha, settings =>
                            {
-                               settings.Name = "fecha_ini";
+                               settings.Name = "Fecha";
                                settings.Properties.UseMaskBehavior = true;
                                settings.Properties.EditFormat = EditFormat.Date;
                                settings.Properties.EditFormatString = "dd/MM/yyyy";
                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdProveedor">Proveedor*</label>
+                    @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
+                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="Solicitante">Solicitante*</label>
                     @Html.TextBoxFor(q => q.Solicitante, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Solicitante, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="Valor">Valor*</label>
+                    @Html.TextBoxFor(q => q.Valor, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Valor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="Concepto">Descripción*</label>
+                    @Html.TextBoxFor(q => q.Concepto, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Concepto, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
