--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorPagar.cp_SolicitudPago_Info
 @{
-    ViewBag.Title = "Nuevo tipo catálogo";
+    ViewBag.Title = "Nueva solicitud de pago";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -11,43 +11,21 @@
 
 @using (Html.BeginForm("Nuevo", "SolicitudPago", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q=>q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdSolicitud)
     <div class="row">
         <div class="col-md-12">
-
-
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
                     @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="Valor">Valor</label>
-                    @Html.TextBoxFor(q => q.Valor, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Valor, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
-            <div class="col-md-3">
+            <div class="col-md-offset-7 col-md-2" >
                 <div class="form-group">
-                    <label for="Concepto">Concepto</label>
-                    @Html.TextBoxFor(q => q.Concepto, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Concepto, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="">Fecha inicio*</label>
+                    <label for="">Fecha*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -65,11 +43,47 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+
+
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdProveedor">Proveedor*</label>
+                  @* @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)*@ 
+                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
                 <div class="form-group">
                     <label for="Solicitante">Solicitante*</label>
                     @Html.TextBoxFor(q => q.Solicitante, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Solicitante, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="Valor">Valor*</label>
+                    @Html.TextBoxFor(q => q.Valor, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Valor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="Concepto">Descripción*</label>
+                    @Html.TextBoxFor(q => q.Concepto, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Concepto, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -79,7 +93,7 @@
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","SolicitudPago",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
 }
