--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagosEnCheques/Anular.cshtml
@@ -17,77 +17,18 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Anular", "PagosEnCheques", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdTransaccion)
-    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdNomina_Tipo">Nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdNomina_TipoLiqui">Tipo liquidación de nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="FechaInicio">Periodo*</label>
-                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), new { @class = "form-control", @id = "IdPeriodo" })
-                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="detalle">Detalle del archivo</label>
-                    @Html.Action("GridViewPartial_pagos_cheques_det")
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","PagosEnCheques",new { Area = "RRHH" },null)">Cancelar</a>
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-}
-
-
 <script>
     $(function () {
         cargar_tipo_liquidacion_nomina();
         cargar_periodos_x_nomina();
-        cargar_empleados();
     });
 
     $("#IdNomina_Tipo").change(function () {
         cargar_tipo_liquidacion_nomina();
-        cargar_empleados();
 
     });
     $("#IdNomina_TipoLiqui").change(function () {
-        $("#IdPeriodo").empty();
         cargar_periodos_x_nomina();
-    });
-    $("#IdPeriodo").change(function () {
-        cargar_empleados();
     });
 
 
@@ -112,7 +53,7 @@
                         $.each(data, function (i, row) {
                             $("#IdNomina_TipoLiqui").append("<option value=" + row.IdNomina_TipoLiqui + ">" + row.DescripcionProcesoNomina + "</option>");
                         });
-                        $("#IdNomina_TipoLiqui").val(2);
+                       // $("#IdNomina_TipoLiqui").val(2);
                     },
                     error: function (error) {
                     }
@@ -146,32 +87,64 @@
         });
     };
 
-            function cargar_empleados() {
-                var datos = {
-                    IdNomina_Tipo: $("#IdNomina_Tipo").val(),
-                    IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
-                    IdPeriodo: $("#IdPeriodo").val(),
-                    IdTransaccionSession: $("#IdTransaccionSession").val()
-
-                }
-
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("CargarEmpleados", "PagosEnCheques", new { Area = "RRHH" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data) {
-                        GridViewPartial_pagos_cheques_det.PerformCallback();
-                    },
-                    error: function (error) {
-                    }
-                });
-    };
-
 
 
 </script>
+
+@using (Html.BeginForm("Anular", "PagosEnCheques", FormMethod.Post, new { @class = "form", @role = "form" }))
+{
+    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdTransaccion)
+    @Html.HiddenFor(q => q.IdNomina_Tipo)
+    @Html.HiddenFor(q => q.IdNomina_TipoLiqui)
+    //@Html.HiddenFor(q => q.IdPeriodo)
+
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdNomina_Tipo">Nómina*</label>
+                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdNomina_TipoLiqui">Tipo liquidación de nómina*</label>
+                    @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), new { @class = "form-control", @id = "IdNomina_TipoLiqui", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="FechaInicio">Periodo*</label>
+                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), new { @class = "form-control", @id = "IdPeriodo" })
+                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="detalle">Detalle del archivo</label>
+                    @Html.Action("GridViewPartial_pagos_cheques_det")
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="box-footer">
+        <button type="submit" class="btn btn-danger">Anular</button>
+        <a class="btn btn-default" href="@Url.Action("Index","PagosEnCheques",new { Area = "RRHH" },null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+}
+
+
