--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_dc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas_dc.cshtml
@@ -64,7 +64,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdGrupoPresupuesto";
-            column.Caption = "Grupo";
+            column.Caption = "Presupuesto";
             column.Width = Unit.Percentage(40);
             column.EditorProperties().ComboBox(p =>
             {
