--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -683,16 +683,14 @@
     }
 }
 <script>
-
     function OnSelectedCtaCbleChanged() {
         GridViewPartial_deudas_dc.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
     function GrupoComboBox_BeginCallback(s, e) {
         e.customArgs["IdCtaCble"] = GridViewPartial_deudas_dc.GetEditor("IdCtaCble").GetValue();
-        e.customArgs["IdSucursal"] = $('#IdSucursal').val();
-        e.customArgs["co_FechaFactura"] = co_FechaFactura.GetValue();
+        e.customArgs["co_FechaFactura"] = moment(co_FechaFactura.GetDate()).format('DD/MM/YYYY');
+        e.customArgs["IdSucursal"] = $("#IdSucursal").val();
     }
-
 
     $(function () {
         $("#IdSucursal").change(function () {
